style.css
*::before,
*::after,
* {
 box-sizing: border-box;
 margin: 0;
 padding: 0;
 outline: 0;
}

body {
  height: 100vh;
  overflow: hidden;
  background: linear-gradient(rgb(236, 240, 237), rgb(236, 240, 237));
  /* background-size: contain; */
  background-repeat: no-repeat;
  background-position: center top;
}

h1 {
  font-family: 'Open Sans', sans-serif;
  font-size: .8em;
  color: #eee;
}

/* Logo */
.logo {
  position: fixed;
  display: flex;
  justify-content: center;
  align-items: flex-start;
  height: 100vh;
  width: 100%;
}

/* Tabs */
.tab {
  position: absolute;
  padding: 10px 20px;
  z-index: -1000;
  width: 120px;
  height: 60px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 2px;
  font-size: 1.2em !important;
  cursor: pointer;
}

/* Sections */
.section {
  transition: all 1s;
  position: fixed;
  z-index: 100;
}

/* Call Section */
#call_section {
  background-color: #158e00;
  width: 80%;
  height: 100%;
  transform: translateX(-100%);
}

#call_tab {
  top: 35%;
  transform: rotate(90deg);
  right: -90px;
  box-shadow: 1px -2px 3px rgba(0,0,0,0.25);
  background: linear-gradient(#158e00c5, #158e00c5), url("images/bgdepth.jpeg");
}

#call_tab h1 {
  transform: rotate(-180deg);
  text-shadow: -1px -2px rgba(0,0,0,0.25);
}

/* FB Section */
#fb_section {
  background-color: #158e00;
  width: 80%;
  height: 100%;
  transform: translateX(125%);
  transition: all 1s;
}

#fb_tab {
  top: 35%;
  transform: rotate(90deg);
  left: -90px;
  box-shadow: 1px 2px 3px rgba(0,0,0,0.25);
  background: linear-gradient(#158e00c5, #158e00c5), url("images/bgdepth.jpeg");
}

#fb_tab h1 {
  text-shadow: -1px -2px rgba(0,0,0,0.25);
}

.fb_iframe_widget_fluid {
  left: -90px;
  top: 25%;
}

/* Price Section */
#price_section {
  background-color: #158e0069;
  width: 80%;
  height: 100%;
  transform: translateX(-100%);
  transition: all 1s;
  padding-left: 20%;
  color: #ddd;
  font-family: "Open Sans", sans-serif;
  padding-top: 20px;
  padding-right: 20px;
  background: linear-gradient(#158e00c5, #158e00c5), url("images/bgdepth.jpeg");
  background-position: center;
}

.container {
  font-size: .8em;
}

#price_section span {
  font-weight: bolder;
}

#price_tab {
  top: 65%;
  transform: rotate(90deg);
  right: -88px;
  box-shadow: 1px -2px 3px rgba(0,0,0,0.25);
  background: linear-gradient(#158e00c5, #158e00c5), url("images/bgdepth.jpeg");
}

#price_tab h1 {
  transform: rotate(-180deg);
  text-shadow: -1px -2px rgba(0,0,0,0.25);
}

/* Price Headers */
#price_section h2 {
  text-align: center;
}

/* Price list */
#price_section p {
  margin-bottom: 5px;
}

#haircut_header {
  margin-bottom: 10px;
  cursor: pointer;
}

#spa_header {
  margin-bottom: 10px;
  cursor: pointer;
}

#massage_header {
  margin-bottom: 10px;
  cursor: pointer;
}

#wax_header {
  margin-bottom: 10px;
  cursor: pointer;
}

/* Price Boxes */
.box {
  margin-top: -10px;
  transition: all .5s;
  overflow: hidden;
  padding-left: 10px;
  margin-bottom: 10px;
}

#haircut_box {
  max-height: 400px;
}

.arrow {
  font-size: .75em;
  margin-left: 5px;
}

#massage_box {
  max-height: 0px;
}

#massage_box ul {
  margin-left: 30px;
}

#spa_box {
  max-height: 0px;
}

#wax_box {
  max-height: 0px;
}

/* Staff Section */
#staff_section {
  background-color: #158e00;
  width: 80%;
  height: 100%;
  transform: translateX(125%);
  transition: all 1s;
  background: linear-gradient(#158e00c5, #158e00c5), url("images/bgdepth.jpeg");
  display: flex;
  flex-direction: column;
  padding-bottom: 25px;
}

#staff_tab {
  top: 65%;
  transform: rotate(90deg);
  left: -88px;
  box-shadow: 1px 2px 3px rgba(0,0,0,0.25);
  background: linear-gradient(#158e00c5, #158e00c5), url("images/bgdepth.jpeg");
  
}

#staff_tab h1 {
  text-shadow: -1px -2px rgba(0,0,0,0.25);
}

/* Person */
.person {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  margin-top: 10px;
}

.person img {
  width: 75%;
  margin: 10px 0;
}

.person h5 {
  font-size: 1.2em;
  color: #eee;
  font-family: "Open Sans", sans-serif;
}

.people_container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-right: 20%;
  margin-top: 20px;
  overflow-y: scroll;
  padding-top: 160px;
}

.icons {
  width: 70%;
  display: flex;
  justify-content: space-around;
  color: #eee;
}


/* Hours Section */
#hours_section {
  background-color: #158e00;
  width: 100%;
  height: 45%;
  transform: translateY(100%);
  transition: all 1s;
  bottom: 0;
  transition: all 1s;
  display: flex;
  justify-content: center;
  align-items: flex-start;
  background: linear-gradient(#158e00c5, #158e00c5), url("images/bgdepth.jpeg");
}

#hours_tab {
  top: -55px;
  left: 50%;
  transform: rotate(-180deg) translateX(50%);
  transition: all 1s;
  box-shadow: -1px 2px 3px rgba(0,0,0,0.25);
  background: linear-gradient(#158e00c5, #158e00c5), url("images/bgdepth.jpeg");
}

#hours_tab h1 {
  transform: rotate(-180deg);
  text-shadow: -1px -2px rgba(0,0,0,0.25);
}
.hours {
  margin-top: 10px;
}

.hours p {
  padding: 3px 0;
  color: #eee;
  font-family: "Open Sans", sans-serif;
  text-align: center;
}


/* SVG BG */
.svg img {
  width: 100%;
  height: 100vh;
  position: fixed;
  left: 0px;
}

/* Money Fade */
.moneyfade {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  color: #222;
  text-align: center;
  font-family: "Open Sans", sans-serif;
  z-index: 100000;
  text-transform: uppercase;
  font-size: .8em;
  padding-top: 150px;
}

.moneyfade .money {
  font-family: 'Playfair Display', serif;
  text-transform: none;
  font-size: 1.4em;
}

/* Map Area */
#map {
  height: 100%;
  border-radius: 2px;
}

#map_area {
  width: 95%;
  height: 60%;
  position: absolute;
  bottom: 10px;
}

